alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -275,12 +275,12 @@ a:visited { color: #000; }
 .imgcap {
   color: #555;
   font-size: 14px;
-  text-align: center;
+  
 }
 
 .svgdiv {
   width: 100%;
-  text-align: center;
+  
 }
 /* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
